re-format after jalopy misuse